--- a/saturnVanity/style.css
+++ b/saturnVanity/style.css
@@ -6,9 +6,57 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
+  z-index: 1000;
 }
 
 .whatsapp-logo {
   width: 60px;
   height: 60px;
+}
+
+.bg-light-grey {
+  background-color: #d3d3d3;
+}
+
+.brand-carousel {
+  overflow: hidden; /* Esconde el contenido que se desborda */
+  position: relative;
+  white-space: nowrap;
+}
+
+.carousel-wrapper {
+  display: flex;
+  animation: scroll 60s linear infinite; /* Animación más lenta y continua */
+}
+
+.carousel-item {
+  display: inline-block; /* Asegura que las tarjetas se muestren en línea */
+  margin-right: 20px;
+}
+
+.brand-card {
+  width: 200px;
+  background-color: orange;
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
+  color: white;
+}
+
+.brand-card img {
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
+  background-color: white; /* Fondo blanco para las imágenes */
+  padding: 10px;
+  border-radius: 5px;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
