--- a/saturn-vanity/components/brands.html
+++ b/saturn-vanity/components/brands.html
@@ -6,79 +6,79 @@
             <div class="carousel-wrapper">
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/01-saturnvanity-apple.png" alt="Apple">
+                        <img src="/assets/brands/01-saturnvanity-apple.png" alt="Apple">
                         <p>Apple</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/02-saturnvanity-Samsung.png" alt="Samsung">
+                        <img src="/assets/brands/02-saturnnvanity-Samsung.png" alt="Samsung">
                         <p>Samsung</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/03-saturnvanity-xiaomi.png" alt="Xiaomi">
+                        <img src="/assets/brands/03-saturnvanity-xiaomi.png" alt="Xiaomi">
                         <p>Xiaomi</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/04-saturnvanity-honor.png" alt="Honor">
+                        <img src="/assets/brands/04-saturnvanity-honor.png" alt="Honor">
                         <p>Honor</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/05-saturnvanity-oppo.png" alt="Oppo">
+                        <img src="/assets/brands/05-saturnvanity-oppo.png" alt="Oppo">
                         <p>Oppo</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/06-saturnvanity-oneplus.png" alt="OnePlus">
+                        <img src="/assets/brands/06-saturnvanity-oneplus.png" alt="OnePlus">
                         <p>OnePlus</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/07-saturnvanity-pixel.png" alt="Pixel">
+                        <img src="/assets/brands/07-saturnvanity-pixel.png" alt="Pixel">
                         <p>Pixel</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/08-saturnvanity-poco.png" alt="Poco">
+                        <img src="/assets/brands/08-saturnvanity-poco.png" alt="Poco">
                         <p>Poco</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/09-saturnvanity-motorola.png" alt="Motorola">
+                        <img src="/assets/brands/09-saturnvanity-motorola.png" alt="Motorola">
                         <p>Motorola</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/10-saturnvanity-nokia.png" alt="Nokia">
+                        <img src="/assets/brands/10-saturnvanity-nokia.png" alt="Nokia">
                         <p>Nokia</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/11-saturnvanity-ulefone.png" alt="Ulefone">
+                        <img src="/assets/brands/11-saturnvanity-ulefone.png" alt="Ulefone">
                         <p>Ulefone</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/12-saturnvanity-huawei.png" alt="Huawei">
+                        <img src="/assets/brands/12-saturnvanity-huawei.png" alt="Huawei">
                         <p>Huawei</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="brand-card">
-                        <img src="../assets/brands/13-saturnvanity-zte.png" alt="ZTE">
+                        <img src="/assets/brands/13-saturnvanity-zte.png" alt="ZTE">
                         <p>ZTE</p>
                     </div>
                 </div>
