--- a/saturn-vanity/style.css
+++ b/saturn-vanity/style.css
@@ -2,6 +2,26 @@
   height: 100vh;
 }
 
+.animation-container {
+  width: 500px; 
+  height: 500px; 
+  overflow: hidden; 
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#canvas3d {
+  width: 1000px;
+  height: 1000px;
+  position: absolute;
+  top: 50%;  
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+}
+
+
 .whatsapp-button {
   position: fixed;
   bottom: 20px;
@@ -19,18 +39,18 @@
 }
 
 .brand-carousel {
-  overflow: hidden; /* Esconde el contenido que se desborda */
+  overflow: hidden; 
   position: relative;
   white-space: nowrap;
 }
 
 .carousel-wrapper {
   display: flex;
-  animation: scroll 60s linear infinite; /* Animación más lenta y continua */
+  animation: scroll 60s linear infinite; 
 }
 
 .carousel-item {
-  display: inline-block; /* Asegura que las tarjetas se muestren en línea */
+  display: inline-block; 
   margin-right: 20px;
 }
 
@@ -47,7 +67,7 @@
   width: 100%;
   height: 150px;
   object-fit: contain;
-  background-color: white; /* Fondo blanco para las imágenes */
+  background-color: white; 
   padding: 10px;
   border-radius: 5px;
 }
