--- a/saturn-vanity/components/brands.html
+++ b/saturn-vanity/components/brands.html
@@ -1,5 +1,5 @@
 
-<section class="py-5 bg-light">
+<section class="py-5 ">
     <div class="container bg-light-grey p-4">
         <h2 class="text-center mb-4">MARCAS</h2>
         <div class="brand-carousel d-flex align-items-center">
