--- a/saturn-vanity/style.css
+++ b/saturn-vanity/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 2, 29);
   color: white;
   font-family: 'Roboto', sans-serif;
 }
@@ -11,6 +11,7 @@ h1, h2, h3 {
 
 /* Navbar */
 .navbar {
+  background-color: rgb(0, 2, 29) !important;
   padding: 15px;
   z-index: 1001; 
 }
